Update table name

--- a/serverless.yml
+++ b/serverless.yml
@@ -58,4 +58,4 @@ resources:
           WriteCapacityUnits: 1
         StreamSpecification:
           StreamViewType: "NEW_AND_OLD_IMAGES"
-        TableName: linkShorterner
+        TableName: linkShorternerDB
