--- a/serverless.yml
+++ b/serverless.yml
@@ -34,6 +34,9 @@ functions:
           method: get
           caching:
             enabled: true
+            cacheKeyParameters:
+              - name: request.path.link
+
   shorternLink:
     handler: handler.shorternLink
     events:
