--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ custom:
 provider:
   name: aws
   runtime: nodejs12.x
+  stage: prod
   apiGateway:
     shouldStartNameWithService: true
   iamRoleStatements:
