--- a/serverless.yml
+++ b/serverless.yml
@@ -62,4 +62,4 @@ resources:
           WriteCapacityUnits: 1
         StreamSpecification:
           StreamViewType: "NEW_AND_OLD_IMAGES"
-        TableName: linkShorternerDB
+        TableName: linkShortenerDB
