--- a/serverless.yml
+++ b/serverless.yml
@@ -1,16 +1,9 @@
 app: link-shortener
 service: link-shortener
-
 plugins:
-  - serverless-api-gateway-caching
+  - serverless-dotenv-plugin
 
 frameworkVersion: "2"
-
-custom:
-  apiGatewayCaching:
-    enabled: true
-    ttlInSeconds: 3600
-
 provider:
   name: aws
   runtime: nodejs12.x
@@ -33,10 +26,6 @@ functions:
       - http:
           path: /{link}
           method: get
-          caching:
-            enabled: true
-            cacheKeyParameters:
-              - name: request.path.link
 
   shortenLink:
     handler: handler.shortenLink
@@ -44,6 +33,8 @@ functions:
       - http:
           path: /
           method: post
+    environment:
+      API_TOKEN: ${env:API_TOKEN}
 
 resources:
   Resources:
